# YOLO-V8-video-detection

./: README.md  pyproject.toml
src/people_movie/: main.py
