[project]
name = "people-movie"
version = "0.1.0"
description = ""
authors = [
    {name = "wutingkang",email = "tingkan2@illinois.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ultralytics (>=8.3.111,<9.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "numpy (<=2.1.1)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "people_movie", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
